about me updated

--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
         <button class="gitbtn">Get in touch</button>
     </main>
 
+    <section class="aboutme">
+        <h3>About me</h3>
+        <h4>Hi! My name is <strong>Nitish Rana</strong>. I create websites using <strong>MERN</strong> stack. I enjoy
+            learning and creating new things,currently i am pursuing my bachelor’s degree in <strong>Computer
+                Science</strong> at UPES, Dehradun.
+            I also enjoy learning about <strong>Cloud</strong> technologies. I am a quick learner and Passionate about
+            tech.</h4>
+    </section>
+
 </body>
 
 </html>
