skills section added

--- a/index.html
+++ b/index.html
@@ -78,6 +78,139 @@
             I also enjoy learning about <strong>Cloud</strong> technologies. I am a quick learner and Passionate about
             tech.</h4>
     </section>
+    <section class="ednSkills">
+        <h3>Education</h3>
+        <h4>UNIVERSITY OF PETROLEUM</h4>
+        <h4>AND ENERGY STUDIES</h4>
+        <h5>B.tech in Computer Science</h5>
+        <h5>May 2023 | Dehradun, India</h5>
+        <h3>Skills</h3>
+        <div class="row1">
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>HTML & CSS</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Javascript</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>react.js</h5>
+            </div>
+        </div>
+        <div class="row1">
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Python</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Express</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>C/C++</h5>
+            </div>
+        </div>
+        <div class="row1">
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>node.js</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Java</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Sql</h5>
+            </div>
+        </div>
+        <div class="row1">
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Django</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>AWS</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Mongodb</h5>
+            </div>
+        </div>
+
+
+
+        <div class="row2">
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>HTML & CSS</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Javascript</h5>
+            </div>
+
+        </div>
+        <div class="row2">
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Python</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Express</h5>
+            </div>
+
+        </div>
+        <div class="row2">
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>node.js</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Java</h5>
+            </div>
+
+        </div>
+        <div class="row2">
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Django</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>AWS</h5>
+            </div>
+
+        </div>
+        <div class="row2">
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Mongodb</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>Sql</h5>
+            </div>
+        </div>
+        <div class="row2">
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>C/C++</h5>
+            </div>
+            <div class="item">
+                <i class="fas fa-angle-right"></i>
+                <h5>react.js</h5>
+            </div>
+        </div>
+
+
+    </section>
 
 </body>
 
