--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a href="#">About me</a></li>
+                <li><a href="#aboutme">About me</a></li>
                 <li><a href="#">Education & skills</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Conatct me</a></li>
             </ul>
         </div>
         <div class="btnresume">
-            <button>Resume</button>
+            <button><a href="NitishRana_resume.pdf" download="NitishRana_resume.pdf">Resume</a></button>
         </div>
     </header>
     <div class="headerSs">
@@ -73,7 +73,7 @@
         <button class="gitbtn">Get in touch</button>
     </main>
 
-    <section class="aboutme">
+    <section class="aboutme" id="aboutme">
         <h3>About me</h3>
         <h4>Hi! My name is <strong>Nitish Rana</strong>. I create websites using <strong>MERN</strong> stack. I enjoy
             learning and creating new things,currently i am pursuing my bachelor’s degree in <strong>Computer
