--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             </ul>
         </div>
         <div class="btnresume">
-            <button><a href="NitishRana_resume.pdf" download="NitishRana_resume.pdf">Resume</a></button>
+            <div class="btnresume">
+                <button><a href="NitishRana_resume.pdf" download="NitishRana_resume.pdf">Resume</a></button>
+            </div>
         </div>
     </header>
     <div class="headerSs">
@@ -41,7 +43,15 @@
         </div>
     </div>
     <div class="menu1">
-
+        <div class="menuitems">
+            <ul>
+                <li><a href="#aboutme">About me</a></li>
+                <li><a href="#">Education & skills</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Conatct me</a></li>
+            </ul>
+        </div>
+        <button><a href="NitishRana_resume.pdf" download="NitishRana_resume.pdf">Resume</a></button>
     </div>
     <div class="socialmedia">
         <div class="socialmediaicons">
