--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="headerSs.css">
     <link rel="stylesheet" href="query.css">
+    <link rel="stylesheet" href="project.css">
     <script src="https://kit.fontawesome.com/227c481214.js" crossorigin="anonymous"></script>
 
 </head>
@@ -42,16 +43,16 @@
             <div class="line3"></div>
         </div>
     </div>
-    <div class="menu1">
-        <div class="menuitems">
-            <ul>
-                <li><a href="#aboutme">About me</a></li>
-                <li><a href="#">Education & skills</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Conatct me</a></li>
-            </ul>
-        </div>
-        <button><a href="NitishRana_resume.pdf" download="NitishRana_resume.pdf">Resume</a></button>
+    <div class="menu1"">
+        <div class=" menuitems">
+        <ul>
+            <li><a href="#aboutme">About me</a></li>
+            <li><a href="#">Education & skills</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Conatct me</a></li>
+        </ul>
+    </div>
+    <button><a href="NitishRana_resume.pdf" download="NitishRana_resume.pdf">Resume</a></button>
     </div>
     <div class="socialmedia">
         <div class="socialmediaicons">
@@ -224,8 +225,25 @@
 
 
     </section>
+    <section class="project">
+        <h3>Projects</h3>
+        <div class="slider">
+            <div class="btnrev">
+                <button class="btn"><i class="fas fa-angle-left"></i></button>
+            </div>
 
+            <div class="slide1">
+
+            </div>
+
+            <div class="btnnext">
+                <button class="btn"><i class="fas fa-angle-right"></i></button>
+            </div>
+        </div>
+
+    </section>
 </body>
 <script src="index.js"></script>
+<script src="projectslider.js"></script>
 
 </html>
