--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Nitish Rana</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="headerSs.css">
-    <link rel="stylesheet" href="query.css">
     <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="query.css">
     <script src="https://kit.fontawesome.com/227c481214.js" crossorigin="anonymous"></script>
 
 </head>
@@ -228,11 +228,19 @@
     <section class="project">
         <h3>Projects</h3>
         <div class="slider">
-            <div class="btnrev">
+            <div class="btnprev">
                 <button class="btn"><i class="fas fa-angle-left"></i></button>
             </div>
 
             <div class="slide1">
+                <h1>Food Delivery App</h1>
+                <div class="projectimg">
+                    <img src="foodapp1.png" alt="">
+                </div>
+                <div class="slidebtn">
+                    <button>Screenshots</button>
+                    <button>Visit</button>
+                </div>
 
             </div>
 
