--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 </div>
                 <div class="slidebtn">
                     <button>Screenshots</button>
-                    <button>Visit</button>
+                    <button><a href="https://challenge-db586.web.app/">Visit</a></button>
                 </div>
 
             </div>
