--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 </div>
                 <div class="slidebtn">
                     <button>Screenshots</button>
-                    <button><a href="https://nitish848.github.io/FoodApp1/">">Visit</a></button>
+                    <button><a href="https://nitish848.github.io/FoodApp1/">Visit</a></button>
                 </div>
 
             </div>
